Issuess [1, 23, 10, 5, 25, 26, 9, 6, 4, 2, 3, 8, 22,27]